# kontroller

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  flake.nix
.cargo/: config.toml
firmware/: .gitignore  Cargo.toml  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
firmware/.cargo/: config.toml
firmware/src/: ble.rs  hid.rs  input.rs  key.rs  keycode.rs  kontroller.rs  layout.rs  led.rs  main.rs
firmware/src/proto/: kontroller.hid.v1.rs  kontroller.v1.rs  mod.rs
konfigurator/: .gitignore  bun.lockb  next.config.mjs  package.json
konfigurator/app/: layout.tsx
konfigurator/public/: manifest.json
nix/: overlay.nix  rust-esp.nix  rust-src-esp.nix
proto/: buf.yaml
proto/kontroller/hid/v1/: key_code.proto  report_type.proto
proto/kontroller/v1/: button.proto  keymap.proto  konfiguration.proto
schematics/: kontroller.kicad_pro  kontroller.kicad_sch  kontroller.kicad_sym  sym-lib-table
slim/: README.md  shell.step
