[package]
name = "firmware"
version = "0.1.0"
description = "Firmware code for the openmoto kontroller, based on ESP32-C3 microcontroller"
repository = "https://github.com/openmoto-org/kontroller"
keywords = ["esp32c3"]
categories = ["embedded", "firmware"]
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2021"
resolver = "2"
readme = "./README.md"
license = "MIT"

[[bin]]
name = "firmware"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "deny"
trivial_casts = "deny"
missing_docs = "deny"

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.release]
opt-level = "s"

[features]
default = ["std", "embassy", "pio"]

alloc = ["esp-idf-svc/alloc"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1.0.86"
defmt = "0.3.8"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
esp-idf-svc = { version = "0.48.1", default-features = false }
esp32-nimble = "0.6.1"
futures = "0.3.30"
log = { version = "0.4", default-features = false }
num_enum = "0.7.2"
prost = "0.12.6"
ssmarshal = "1.0.0"
usbd-hid = { version = "0.7.0", features = ["defmt"] }

[build-dependencies]
embuild = "0.31.3"
